package br.unesp.rc.BancoSimulator.model;

/**
 * Enum que modela o tipo de uma conta, se esta é corrente ou poupança </br>
 * <b> Neste estudo de caso, isso não vai fazer nenhuma diferença, seria apenas útil em uma possível regra de negócio </b>
 *
 * @author Daniel
 */
public enum TipoConta{
    CORRENTE,
    POUPANCA
}
